--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -25,6 +25,30 @@ h1.site {
   padding: 5px;
 }
 
+.vidbg {
+  background: #000;
+  position: fixed;
+  top: 0; right: 0; bottom: 0; left: 0;
+  z-index: -99;
+  
+}
+.vidfg,
+.vidbg iframe {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  /*Remove blur if using video located on webserver*/
+  /*Only blur because streamable has low quality embeds*/
+  -webkit-filter: blur(2px);
+  -moz-filter: blur(2px);
+  -o-filter: blur(2px);
+  -ms-filter: blur(2px);
+  filter: blur(2px);
+}
+
 #Infamy {
   position: fixed;
   z-index: 1;
@@ -141,6 +165,13 @@ a.projects:hover:before { content:" Soon :)   " }
     border-radius: 0;
   }
 } 
+
+@media (min-aspect-ratio: 16/9) {
+  .vidfg { height: 300%; top: -100%; }
+}
+@media (max-aspect-ratio: 16/9) {
+  .vidfg { width: 300%; left: -100%; }
+}
 
 /*Colors*/
 
