--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -1,4 +1,3 @@
-
 @font-face {
   font-family: 'pxplus_ibm_vga8regular';
   src: url("../../assets/fonts/PxPlus_IBM_VGA8.ttf") format("truetype");
@@ -68,7 +67,7 @@ h1.site {
   left: 50%;
   margin-left: -300px; /* margin is -0.5 * dimension */
   margin-top: -100px; 
-  background-color: rgb(0, 43, 54, 50%);
+  background-color: rgba(0, 43, 54, 0.5);
   border-radius: 0;
 
   -webkit-display: -webkit-box;
@@ -93,6 +92,7 @@ h1.site {
   text-align: center;
   align-content: center;
   font-size: 1.15em;
+  color: #a8bdbd;
 }
 
 a {
@@ -108,12 +108,11 @@ a.button {
   border-radius: 0.12em;
   box-sizing: border-box;
   text-decoration: none;
-  background: rgb(0, 43, 54, 25%);
   text-align: center;
   transition: all 0.15s;
 }
 a.button:hover {
-  text-shadow: 0 0 2em rgba(255,255,255,30%);
+  text-shadow: 0 0 2em rgba(255, 255, 255, 0.3);
   border-color: #FFFFFF !important;
   text-decoration: underline;
 }
