--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -1,28 +1,4 @@
-@font-face {
-  font-family: 'pxplus_ibm_vga8regular';
-  src: url("../../assets/fonts/PxPlus_IBM_VGA8.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
-
-}
-
-* {
-  font-weight: normal !important;
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  font-family: 'pxplus_ibm_vga8regular', sans-serif;
-  background-color: #002b36;
-  color: #93a1a1;
-}
-
-h1.site {
-  z-index: 2;
-  position: relative;
-  padding: 5px;
-}
+@import "global.css";
 
 .vidbg {
   background: #000;
@@ -82,70 +58,6 @@ h1.site {
   flex-direction: column;  
 }
 
-.container h1 {
-  padding: 10px;
-  text-align: center;
-  align-content: center;
-}
-
-.container p {
-  text-align: center;
-  align-content: center;
-  font-size: 1.15em;
-  color: #a8bdbd;
-}
-
-a {
-  color: #001f27; 
-}
-
-a.button {
-  font-size: 1.15em;
-  display: inline-flex;
-  padding: 0.46em 1em;
-  border: 0.15em solid;
-  margin: 0 0.3em 0.2em 0;
-  border-radius: 0.12em;
-  box-sizing: border-box;
-  text-decoration: none;
-  text-align: center;
-  transition: all 0.15s;
-}
-a.button:hover {
-  text-shadow: 0 0 2em rgba(255, 255, 255, 0.3);
-  border-color: #FFFFFF !important;
-  text-decoration: underline;
-}
-
-a.discord:hover span { display:none }
-a.discord:hover:before { content:"Turner#0001" }
-
-a.projects:hover span { display:none}
-a.projects:hover:before { content:" Soon :)   " }
-
-.buttons {
-  margin:  20px 20px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  flex-wrap: wrap;
-  /*max-width: 600px;*/
-}
-
-.bouncy{
-  animation:bouncy 5s linear;
-  position:relative;
-  }
-  @keyframes bouncy {
-    0%{top:0em}
-    40%{top:0em}
-    43%{top:-0.5em}
-    46%{top:0em}
-    48%{top:-0.3em}
-    50%{top:0em}
-    100%{top:0em;}
-} 
-
 @media all and (max-width:30em){
   a.button {
     display:inline-block;
@@ -172,44 +84,3 @@ a.projects:hover:before { content:" Soon :)   " }
   .vidfg { width: 300%; left: -100%; }
 }
 
-/*Colors*/
-
-.color-0 {
-color: #b58900;
-border-color:#b58900;
-}
-
-.color-1 {
-color: #cb4b16;
-border-color:#cb4b16;
-}
-
-.color-2 {
-color: #dc322f;
-border-color:#dc322f;
-}
-
-.color-3 {
-color: #d33682;
-border-color:#d33682;
-}
-
-.color-4 {
-color: #6c71c4;
-border-color:#6c71c4;
-}
-
-.color-5 {
-color: #268bd2;
-border-color:#268bd2;
-}
-
-.color-6 {
-color: #2aa198;
-border-color:#2aa198;
-}
-
-.color-7 {
-color: #859900;
-border-color:#859900;
-}
